# fsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
examples/: alternative.cc  async.cc  cd_player.cc  debugging_switch.cc  graph.cc  mealy_switch.cc  moore_machine.cc  multiple_switch.cc  resetting_switch.cc  runtime.cc  simple.cc  simple_switch.cc  struct.cc
examples/elevator/: elevator.cc  elevator.h  fsm_list.h  main.cc  motor.cc  motor.h
include/fsm/: any.h  error.h  errors.h  event.h  events.h  fsm.h  locks.h  optional.h  utils.h
src/: event.cc  events.cc  fsm.cc  locks.cc  placeholder.cc  utils.cc
tests/: fsm_test.cc  fsm_tests.cc
tests/fsm_test/: fsm_test.h  test_basic_row.cc  test_mem_fn_row.cc  test_no_trans.cc  test_recursive.cc  test_scoped.cc
tests/traits_test/: traits_test.cc
